# jaymd-winnow

./: CLAUDE.md  LICENSE  README.md  pyproject.toml  spec.md
src/jaymd_winnow/: __init__.py  cache.py  config.py  pipeline.py  stability_selection.py  trace.py  types.py
src/jaymd_winnow/monitoring/: __init__.py  calibration.py  stability.py  triggers.py
src/jaymd_winnow/phases/: __init__.py  clustering.py  modelling.py  screening.py
tests/: conftest.py  test_cache.py  test_calibration.py  test_clustering.py  test_config.py  test_end_to_end.py  test_modelling.py  test_pipeline.py  test_screening.py  test_stability_selection.py  test_trace.py  test_triggers.py
